--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uh-i",
+  "name": "@bertiare-ui/uh-i",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bertiare-ui/react": "^1.1.0",
+    "@bertiare-ui/tokens": "^1.1.0",
+    "@stitches/react": "^1.2.8",
+    "geist": "^1.3.1",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
