--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bertiare-ui/react": "^1.2.16",
+    "@bertiare-ui/react": "^1.2.20",
     "@bertiare-ui/tokens": "^1.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@stitches/react": "^1.2.8",
     "geist": "^1.3.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
